--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <p>São excluídos todos os dados inseridos no aplicativo, como informações de livros, imagens de capa e anotações. Nenhum dado é mantido após a desinstalação.</p>
 
   <h2>Contato</h2>
-  <p>Se você tiver dúvidas ou precisar de suporte, entre em contato com o desenvolvedor pelo e-mail: <em>comim.gabriel@gmail.com</em></p>
+  <p>Se você tiver dúvidas ou precisar de suporte, entre em contato com o desenvolvedor pelo e-mail: <em>comim.dev@gmail.com</em></p>
 
   <p>Última atualização: julho de 2025</p>
 </body>
